--- a/index.html
+++ b/index.html
@@ -12,8 +12,15 @@
 <body>
     <h1 class="judul">UNDANG UNDANG ARIVENA</h1>
 
-    <h2 class="ringan">NOTE: PENJARA MAX 60 BULAN .RAWRR</h2>
+    <h2 class="ringan">NOTE: PENJARA MAX 60 BULAN 👮 SALAM PRESISI 👮</h2>
 </table>
+
+        <div class="form-group">
+        <label for="nama">Nama:</label>
+        <input type="text" id="nama">
+    </div>
+
+    <button onclick="submitForm()">Submit</button>
 
     <h2 class="sedang">PERSENJATAAN</h2>
     <table class="sedangTable">
@@ -413,20 +420,10 @@
             <td>45</td>
         </tr>
 
-
-    <div class="form-group">
-        <label for="nama">Nama:</label>
-        <input type="text" id="nama">
-    </div>
-
-    <button onclick="submitForm()">Submit</button>
-
-    <div id="history"></div>
-
     <footer>
         <div class="credits">
             <p>Copyright  2024. All Rights Reserved.</p>
-            <p>Inspired By HANFIKTAMPAN RAWR | Developer by: Asep Prawiraharja</p>
+            <p>Inspired By HANFIKTAMPAN RAWR | Developer by:👮 Asep Prawiraharja 👮</p>
         </div>
     </footer>
 
