--- a/index.html
+++ b/index.html
@@ -10,10 +10,17 @@
 </head>
 
 <body>
-    <h1 class="judul">UNDANG UNDANG ARIVENA</h1>
+    <h1 class="judul">UNDANG UNDANG ARIVENA PREMIRE</h1>
 
-    <h2 class="ringan">NOTE: PENJARA MAX 60 BULAN 👮 SALAM PRESISI 👮</h2>
+    <h2 class="ringan">👮SALAM PRESISI👮</h2>
 </table>
+
+        <footer>
+        <div class="credits">
+            <p>Copyright  2024. All Rights Reserved.</p>
+            <p>Inspired By HANFIK YANG KECE | Developer by:👮 Asep Prawiraharja 👮</p>
+        </div>
+        </footer>
 
         <div class="form-group">
         <label for="nama">Nama:</label>
@@ -22,7 +29,7 @@
 
     <button onclick="submitForm()">Submit</button>
 
-    <h2 class="sedang">PERSENJATAAN</h2>
+    <h2 class="sedang">👮PERSENJATAAN👮</h2>
     <table class="sedangTable">
         <tr class="sedang2">
             <td>UU</td>
@@ -244,7 +251,7 @@
         </tr>
 </table>
 
-    <h2 class="sedang">KRIMINAL APARATUR NEGARA</h2>
+    <h2 class="sedang">👮KRIMINAL APARATUR NEGARA👮</h2>
     <table class="sedangTable">
         <tr class="sedang2">
             <td>UU</td>
@@ -327,7 +334,7 @@
         </tr>
 </table>
 
-    <h2 class="sedang">OBAT OBATAN/NARKOTIKA</h2>
+    <h2 class="sedang">👮OBAT OBATAN/NARKOTIKA👮</h2>
     <table class="sedangTable">
         <tr class="sedang2">
             <td>UU</td>
@@ -370,7 +377,7 @@
         </tr>
 </table>
 
-    <h2 class="sedang">KEAMANAN PUBLIK/PERJUDIAN</h2>
+    <h2 class="sedang">👮KEAMANAN PUBLIK/PERJUDIAN👮</h2>
     <table class="sedangTable">
         <tr class="sedang2">
             <td>UU</td>
@@ -420,12 +427,6 @@
             <td>45</td>
         </tr>
 
-    <footer>
-        <div class="credits">
-            <p>Copyright  2024. All Rights Reserved.</p>
-            <p>Inspired By HANFIKTAMPAN RAWR | Developer by:👮 Asep Prawiraharja 👮</p>
-        </div>
-    </footer>
 
 </body>
 
