--- a/index.html
+++ b/index.html
@@ -10,15 +10,15 @@
 </head>
 
 <body>
-    <h1 class="judul">UNDANG UNDANG ARIVENA PREMIRE</h1>
+    <h1 class="judul">UUD ARIVENA PREMIRE</h1>
 
-    <h2 class="ringan">👮SALAM PRESISI👮</h2>
+    <h2 class="ringan">👮PRESISI👮</h2>
 </table>
 
         <footer>
         <div class="credits">
-            <p>Copyright  2024. All Rights Reserved.</p>
-            <p>Inspired By HANFIK YANG KECE | Developer by:👮 Asep Prawiraharja 👮</p>
+            <p>Copyright 2024 </p>
+            <p>Ins: By HANFIK YANG KECE | Dev by:👮 Asep Prawiraharja 👮</p>
         </div>
         </footer>
 
@@ -29,7 +29,7 @@
 
     <button onclick="submitForm()">Submit</button>
 
-    <h2 class="sedang">👮PERSENJATAAN👮</h2>
+    <h2 class="sedang">PERSENJATAAN</h2>
     <table class="sedangTable">
         <tr class="sedang2">
             <td>UU</td>
@@ -251,7 +251,7 @@
         </tr>
 </table>
 
-    <h2 class="sedang">👮KRIMINAL APARATUR NEGARA👮</h2>
+    <h2 class="sedang">KRIMINAL APARATUR NEGARA</h2>
     <table class="sedangTable">
         <tr class="sedang2">
             <td>UU</td>
@@ -334,7 +334,7 @@
         </tr>
 </table>
 
-    <h2 class="sedang">👮OBAT OBATAN/NARKOTIKA👮</h2>
+    <h2 class="sedang">OBAT OBATAN/NARKOTIKA</h2>
     <table class="sedangTable">
         <tr class="sedang2">
             <td>UU</td>
@@ -377,7 +377,7 @@
         </tr>
 </table>
 
-    <h2 class="sedang">👮KEAMANAN PUBLIK/PERJUDIAN👮</h2>
+    <h2 class="sedang">KEAMANAN PUBLIK/PERJUDIAN</h2>
     <table class="sedangTable">
         <tr class="sedang2">
             <td>UU</td>
