--- a/index.html
+++ b/index.html
@@ -10,18 +10,19 @@
 </head>
 
 <body>
-    <h1 class="judul">UUD ARIVENA PREMIRE</h1>
+    <h1 class="judul">UNDANG UNDANG ARIVENA</h1>
 
-    <h2 class="ringan">👮PRESISI👮</h2>
+    <h2 class="ringan">NOTE: PENJARA MAX 60 BULAN .RAWRR</h2>
 </table>
 
-        <footer>
-        <div class="credits">
-            <p>Copyright 2024 </p>
-            <p>Ins: By HANFIK YANG KECE | Dev by:👮 Asep Prawiraharja 👮</p>
-        </div>
-        </footer>
+        <div class="form-group">
+        <label for="nama">Nama:</label>
+        <input type="text" id="nama">
+    </div>
 
+    <button onclick="submitForm()">Submit</button>
+
+    <div id="history"></div>
 
     <h2 class="sedang">PERSENJATAAN</h2>
     <table class="sedangTable">
@@ -421,12 +422,17 @@
             <td>45</td>
         </tr>
 
-                <div class="form-group">
-        <label for="nama">Nama:</label>
-        <input type="text" id="nama">
-    </div>
 
-    <button onclick="submitForm()">Submit</button>
+
+
+    <footer>
+        <div class="credits">
+            <p>Copyright  2024. All Rights Reserved.</p>
+            <p>Inspired By HANFIKTAMPAN RAWR | Developer by: Asep Prawiraharja</p>
+        </div>
+    </footer>
+
 </body>
 
-</html>
+    </html>
+    
