--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
 </head>
 
 <body>
-    <h1 class="judul">UNDANG UNDANG ARIVENA</h1>
+    <h1 class="judul">UUD ARIVENA</h1>
 
-    <h2 class="ringan">NOTE: PENJARA MAX 60 BULAN .RAWRR</h2>
+    <h2 class="ringan">👮 PRESISI👮</h2>
 </table>
 
         <div class="form-group">
@@ -23,6 +23,13 @@
     <button onclick="submitForm()">Submit</button>
 
     <div id="history"></div>
+
+        <footer>
+        <div class="credits">
+            <p>Copyright 2024</p>
+            <p>Inspired By HANFIKTAMPAN RAWR | Dev By : 👮Asep Prawiraharja👮</p>
+        </div>
+        </footer>
 
     <h2 class="sedang">PERSENJATAAN</h2>
     <table class="sedangTable">
@@ -421,16 +428,6 @@
             <td>750</td>
             <td>45</td>
         </tr>
-
-
-
-
-    <footer>
-        <div class="credits">
-            <p>Copyright  2024. All Rights Reserved.</p>
-            <p>Inspired By HANFIKTAMPAN RAWR | Developer by: Asep Prawiraharja</p>
-        </div>
-    </footer>
 
 </body>
 
