--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
     <h1 class="judul">UUD ARIVENA</h1>
 
-    <h2 class="ringan">👮 PRESISI👮</h2>
+    <h2 class="ringan">👮PRESISI👮</h2>
 </table>
 
         <div class="form-group">
@@ -27,7 +27,7 @@
         <footer>
         <div class="credits">
             <p>Copyright 2024</p>
-            <p>Inspired By HANFIKTAMPAN RAWR | Dev By : 👮Asep Prawiraharja👮</p>
+            <p>Dev By : 👮Teddy Abimana👮</p>
         </div>
         </footer>
 
@@ -38,7 +38,7 @@
             <td>CEKLIS</td>
             <td>PERSENJATAAN</td>
             <td>DENDA</td>
-            <td>PENJARA</td>
+           <td>PENJARA</td>
         </tr>
 
         <tr>
