--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     </div>
 
     <button onclick="submitForm()">Submit</button>
-<h1>PENJARA MAX 60 BULAN,KALAU DIA BATU KASIH PENJARA LEBIH DIKIT GPP </h2>
+<h1 class="judul">PENJARA MAX 60 BULAN,KALAU DIA BATU KASIH PENJARA LEBIH DIKIT GPP </h2>
     <div id="history"></div>
 
         <footer>
