--- a/index.html
+++ b/index.html
@@ -21,7 +21,9 @@
     </div>
 
     <button onclick="submitForm()">Submit</button>
-<h5 class="judul">PENJARA MAX 60 BULAN,KALAU DIA BATU KASIH PENJARA LEBIH DIKIT GPP </h5>
+    
+<h5>PENJARA MAX 60 BULAN,KALAU DIA BATU KASIH PENJARA LEBIH DIKIT GPP </h5>
+    
     <div id="history"></div>
 
         <footer>
