--- a/index.html
+++ b/index.html
@@ -19,11 +19,9 @@
         <label for="nama">Nama:</label>
         <input type="text" id="nama">
     </div>
+    <h5 class="judul" >PENJARA MAX 60 BULAN,KALAU DIA BATU KASIH PENJARA LEBIH DIKIT GPP </h5>
 
     <button onclick="submitForm()">Submit</button>
-    
-<h5>PENJARA MAX 60 BULAN,KALAU DIA BATU KASIH PENJARA LEBIH DIKIT GPP </h5>
-    
     <div id="history"></div>
 
         <footer>
