--- a/index.html
+++ b/index.html
@@ -19,15 +19,15 @@
         <label for="nama">Nama:</label>
         <input type="text" id="nama">
     </div>
-    <h5 class="judul" >PENJARA MAX 60 BULAN,KALAU DIA BATU KASIH PENJARA LEBIH DIKIT GPP </h5>
-
+    <h5 class="judul" >PENJARA MAX 60 BULAN,KALAU DIA TIDAK MEMBAYAR TAGIHAN INVOICE/MEMILIKI INVOICE MENUMPUK KASIH PENJARA LEBIH DIKIT GPP </h5>
+     <h5 class="judul" > PENJARA KASUS DPU PENJARA 120 BULAN</h5>
     <button onclick="submitForm()">Submit</button>
     <div id="history"></div>
 
         <footer>
         <div class="credits">
-            <p>Copyright 2024</p>
-            <p>Dev By : 👮Teddy Abimana👮</p>
+            <a href="https://www.instagram.com/mezz1606?igsh=MTk2YXkydTNlbzQ2ZQ=="> Kunjungi Google</a>
+           <p>Dev By : 👮Teddy Abimana👮</p>
         </div>
         </footer>
 
