--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
         <label for="nama">Nama:</label>
         <input type="text" id="nama">
     </div>
-    <h5 class="judul" >PENJARA MAX 60 BULAN,KALAU DIA TIDAK MEMBAYAR TAGIHAN INVOICE/MEMILIKI INVOICE MENUMPUK KASIH PENJARA LEBIH DIKIT GPP </h5>
-     <h5 class="judul" > PENJARA KASUS DPU PENJARA 120 BULAN</h5>
+    <h5 class="judul" >PENJARA MAX 60 BULAN,KALAU DIA TIDAK MEMBAYAR TAGIHAN INVOICE/MEMILIKI INVOICE MENUMPUK KASIH PENJARA LEBIH DIKIT GPP 60 BULAN JADI 65/70 BULAN </h5>
+     <h5 class="judul" > PENJARA KASUS DPO PENJARA 120 BULAN</h5>
     <button onclick="submitForm()">Submit</button>
     <div id="history"></div>
 
