--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
 <body>
     <h1 class="judul">UUD ARIVENA</h1>
 
+    <audio autoplay loop>mp3" /> <source src="https://youtu.be/EyGA9nQ6zY0?si=RuJ02c89UgftgzCQ" type="audio/mpeg"> </audio>
+
     <h2 class="ringan">👮PRESISI👮</h2>
 </table>
 
