--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
 <body>
     <h1 class="judul">UUD ARIVENA</h1>
     
-    <audio controls>
-  <source src="lampu_merah" type="audio/ogg">
-  <source src="lampu_merah" type="audio/mpeg">
+    <audio autoplay loop>
+  <source src="lampu_merah.mp3" type="audio/ogg">
+  <source src="lampu_merah.mp3" type="audio/mpeg">
   Your browser does not support the audio tag.
     </audio>
     
@@ -26,7 +26,7 @@
         <input type="text" id="nama">
     </div>
     <h5 class="judul" >PENJARA MAX 60 BULAN,KALAU DIA TIDAK MEMBAYAR TAGIHAN INVOICE/MEMILIKI INVOICE MENUMPUK KASIH PENJARA LEBIH DIKIT GPP 60 BULAN JADI 65/70 BULAN </h5>
-     <h5 class="judul" > PENJARA KASUS DPO PENJARA 120MEMEK BULAN</h5>
+     <h5 class="judul" > PENJARA KASUS DPO PENJARA 120MEMEK BAAU BULAN</h5>
     <button onclick="submitForm()">Submit</button>
     <div id="history"></div>
 
