--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
     <h1 class="judul">UUD ARIVENA</h1>
     
-    <audio controls>
+    <audio autoplay>
   <source src="lampu_merah.mp3" type="audio/ogg">
   <source src="lampu_merah.mp3" type="audio/mpeg">
   Your browser does not support the audio tag.
@@ -32,7 +32,7 @@
 
         <footer>
         <div class="credits">
-            <a href="https://www.instagram.com/mezz1606?igsh=MTk2YXkydTNlbzQ2ZQ=="> Kunjungi Google</a>
+            <a href="https://www.instagram.com/mezz1606?igsh=MTk2YXkydTNlbzQ2ZQ=="> Follow ig Gwe Dapat bansos</a>
            <p>Dev By : 👮Teddy Abimana👮</p>
         </div>
         </footer>
